# botstash

./: .gitignore  README.md  VECTORBOARD_SPEC.md  pyproject.toml
src/botstash/: __init__.py  cli.py  config.py  models.py  personas.py  pipeline.py
src/botstash/anythingllm/: __init__.py  client.py
src/botstash/classifier/: auto.py
src/botstash/extractors/: __init__.py  docx.py  pdf.py  pptx.py  qti.py  text.py  unit_outline.py  url_tracker.py  vtt.py
src/botstash/ingester/: imscc.py  transcript.py
src/botstash/webui/: app.py
src/botstash/webui/templates/: base.html  result.html  review.html  upload.html
src/vectorboard/: __init__.py  cli.py  pipeline.py
src/vectorboard/anythingllm/: client.py
src/vectorboard/classifier/: auto.py
src/vectorboard/extractors/: pdf.py  pptx.py  vtt.py
src/vectorboard/ingester/: imscc.py
src/vectorboard/webui/: app.py
tests/: test_anythingllm.py  test_classifier.py  test_cli.py  test_config.py  test_extractors.py  test_imscc.py  test_models.py  test_personas.py  test_pipeline.py  test_scanner.py  test_transcript.py  test_unit_outline.py  test_version.py  test_webui.py
